Se añade al repositorio el buscador

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
     <header>
         <div class="logo">SartenAuctions</div>
         <nav>
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="#">Servicios</a>
-            <a href="#">Productos</a>
+            <a href="finder.html">Productos</a>
             <a href="#">Nosotros</a>
         </nav>
-        <a href="login.html" class="contact-button">Iniciar Sesion</a>
+        <a href="login.html" class="cta-button">Iniciar Sesion</a>
     </header>
 
 
@@ -27,8 +27,8 @@
           <h1>Bienvenido a SartenAuctions</h1>
           <p>Compra y vende los mejores sartenes del mundo en nuestra plataforma de subastas.</p>
           <nav>
-              <a href="#" class="cta-button">Explorar Subastas</a>
-              <a href="#" class="cta-button">Vender una Sartén</a>
+              <a href="finder.html" class="cta-button-info">Explorar Subastas</a>
+              <a href="#" class="cta-button-info">Vender una Sartén</a>
           </nav>
       </header>
   
@@ -41,7 +41,7 @@
                       <figcaption>Sartén de Hierro Fundido</figcaption>
                   </figure>
                   <p class="price">Precio actual: $50</p>
-                  <button class="bid-button">Pujar</button>
+                  <a href="auction1.html" class="cta-button-bid">Pujar</a>
               </article>
   
               <article class="auction-item">
@@ -50,7 +50,7 @@
                       <figcaption>Sartén Antiadherente Premium</figcaption>
                   </figure>
                   <p class="price">Precio actual: $35</p>
-                  <button class="bid-button">Pujar</button>
+                  <a href="auction2.html" class="cta-button-bid">Pujar</a>
               </article>
   
               <article class="auction-item">
@@ -59,7 +59,7 @@
                       <figcaption>Sartén de Cobre Profesional</figcaption>
                   </figure>
                   <p class="price">Precio actual: $75</p>
-                  <button class="bid-button">Pujar</button>
+                  <a href="auction3.html" class="cta-button-bid">Pujar</a>
               </article>
           </section>
       </section>
