--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">SartenAuctions</div>
-        <a href="register.html" class="contact-button">Registrarse</a>
+        <a href="register.html" class="cta-button">Registrarse</a>
     </header>
 
     <main>
@@ -25,8 +25,8 @@
                 <input type="password" id="password" name="password" required>
                 
                 <div class="button-group">
-                    <button type="submit" class="contact-button">Iniciar Sesión</button>
-                    <button type="button" class="contact-button" onclick="window.location.href='index.html'">Volver</button>
+                    <button type="submit" class="cta-button">Iniciar Sesión</button>
+                    <button type="button" class="cta-button" onclick="window.location.href='index.html'">Volver</button>
                 </div>
             </form>
         </section>
