--- a/src/register.html
+++ b/src/register.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">SartenAuctions</div>
-        <a href="login.html" class="contact-button">Iniciar Sesión</a>
+        <a href="login.html" class="cta-button">Iniciar Sesión</a>
     </header>
 
     <main>
@@ -64,8 +64,8 @@
                 </select>
                 
                 <div class="button-group">
-                    <button type="submit" class="contact-button">Registrarse</button>
-                    <button type="button" class="contact-button" onclick="window.location.href='index.html'">Volver</button>
+                    <button type="submit" class="cta-button">Registrarse</button>
+                    <button type="button" class="cta-button" onclick="window.location.href='index.html'">Volver</button>
                 </div>
             </form>
         </section>
